Prevent code segments wrapping on home page

--- a/css/module/section.css
+++ b/css/module/section.css
@@ -32,6 +32,7 @@ code:not([class]) {
     color: var(--theme-accent);
     font-family: var(--font-mono);
     font-size: 0.85em;
+    text-wrap: nowrap;
 }
 
 .section--card-list {
